plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.finance'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

bootRun {
	systemProperty 'spring.profiles.active', 'test'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'

	implementation 'jakarta.xml.bind:jakarta.xml.bind-api'
	implementation 'org.glassfish.jaxb:jaxb-runtime'
	implementation 'org.json:json:20231013'

	implementation 'com.google.code.gson:gson'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.flywaydb:flyway-core:9.16.3'

	testImplementation 'org.testcontainers:junit-jupiter:1.18.3'
	testImplementation 'org.testcontainers:postgresql:1.18.3'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'io.lettuce:lettuce-core'

	// 캐시 관련 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// 유효성 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 암복호화 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// 메일
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}